--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis sunt <em>dolorum commodi vel,</em> a recusandae! Hic earum minima inventore. Dolor?</p>
 
        </div>
+       <!-- task 2 -->
        <h1 class="task">TASK TWO</h1>
          <h2 class="task blog">My Travel Blog</h2>
        <div class="container">
@@ -66,6 +67,18 @@
         </div>
        
        </div>
+       <!-- task 3  -->
+        <h1 class=" task three">TASK THREE</h1>
+        <div>
+          <h1 class="data three">Enter Your Data</h1>
+          <form class="form1">
+            <input type="email" name="" id="" placeholder="Email">
+            <input type="password" name="" id="" placeholder="password">
+            <input type="submit" value="submit">
+          </form>
+        </div>
+
+
        
 
     </main>
