added form background

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        </div>
        <!-- task 3  -->
         <h1 class=" task three">TASK THREE</h1>
-        <div>
+        <div class="box">
           <h1 class="data three">Enter Your Data</h1>
           <form class="form1">
             <input type="email" name="" id="" placeholder="Email">
